--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  <br>
  <hr><h2>Fishes</h2>
  <br>
- <center><a href="https://en.wikipedia.org/wiki/Goldfish"><img src="https://raw.githubusercontent.com/kayalvizhi2804/happypaws/master/22519-3-real-fish-transparent-image.png" width="300"></a></center>
+ <center><a href="https://en.wikipedia.org/wiki/Goldfish"><img src="22519-3-real-fish-transparent-image.png" width="300"></a></center>
  <h3><pre style="color:blue"><i><b>FRESHWATER FISHES AVAILABLE:</b>
 <a href="https://www.liveaquaria.com/product/2741/?pcatid=2741">1. Longfin Zebra Danio (Danio rerio)</a>
 <a href="https://en.wikipedia.org/wiki/Jack_Dempsey_(fish)">2. Jack Dempsey (Rocio octofasciata)</a>
