--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
  <title>HAPPY PAWS</title>
 <style>
- body{
-  background-image: url("bg1.jpg");
+	body{
+		background-image: url("bg1.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
@@ -13,14 +13,20 @@
 </style>
 </head>
 <body>
- <h1><center><i>HAPPY PAWS</i></center></h1>
- <hr>
- <h2 style="color:red" align="center"><p><i>For buying beautyful Fishes and Birds visit happy paws</i></p></h2>
- <br>
- <hr><h2>Fishes</h2>
- <br>
- <center><a href="https://en.wikipedia.org/wiki/Goldfish"><img src="22519-3-real-fish-transparent-image.png" width="300"></a></center>
- <h3><pre style="color:blue"><i><b>FRESHWATER FISHES AVAILABLE:</b>
+	<center><image src="logo.png" width="600"></center>
+	<hr>
+	<h2 style="font-family:cursive; color: red" align="center"><p><i>For buying beautiful Fishes and Birds visit happy paws</i></p></h2>
+	<br>
+	<hr><h2>Fishes</h2>
+	<br>
+	<a href="https://en.wikipedia.org/wiki/Goldfish"><img src="22519-3-real-fish-transparent-image.png" width="300"></a>
+	<img src="logo3.png" width="300">
+	<img src="logo2.png" width="300">
+	<img src="logo10.png" width="300">
+<table border="7" cellpadding ="25" cellspacing="10" style="width:100%;">
+    <thead><tr>
+    <th>
+	<h3><pre style="color:blue" align="justify"><i><h2>FRESHWATER FISHES AVAILABLE:</h2>
 <a href="https://www.liveaquaria.com/product/2741/?pcatid=2741">1. Longfin Zebra Danio (Danio rerio)</a>
 <a href="https://en.wikipedia.org/wiki/Jack_Dempsey_(fish)">2. Jack Dempsey (Rocio octofasciata)</a>
 <a href="https://en.wikipedia.org/wiki/Neon_tetra">3. Neon Tetra (Paracheirodon innesi)</a>
@@ -37,10 +43,23 @@
 <a href="https://en.wikipedia.org/wiki/Sailfin_molly">14. Sailfin Molly (Poecilia latipinna)</a>
 <a href="https://en.wikipedia.org/wiki/Hypostomus_plecostomus">15. Plecostomus (Hypostomus plecostomus)</a></i>
 </pre></h3>
+</th>
+<th>
+<video controls width="640" height="400" align="right">
+    <source src="video1.mp4" type="video/mp4">
+    <source src="video1.ogg" type="video/ogg">
+  </video></th></tr></thead></table>
 <hr><h2>Birds</h2>
- <br>
- <center><a href="https://en.wikipedia.org/wiki/Bird"><img src="PicsArt_07-15-09.50.30.png" width="300"></a></center>
- <h3><pre style="color:blue"><i><b>LIST OF PET BIRDS AVAILABLE:</b>
+	<br>
+	<a href="https://en.wikipedia.org/wiki/Bird"><img src="PicsArt_07-15-09.50.30.png" width="300"></a>
+	<img src="logo5.png" width="300">
+	<img src="logo12.png" width="300">
+	<img src="logo7.png" width="300">
+	<table border="7" cellpadding ="25" cellspacing="10" style="width:100%;">
+    <thead><tr>
+    <th>
+    <h3><pre style="color:blue" align="justify"><i><h2>LIST OF PET BIRDS AVAILABLE:</h2>
+  
 <a href="https://en.wikipedia.org/wiki/Sri_Lanka_frogmouth">1. Ceylon Frogmouth (Batrachostomus moniliger)</a>
 <a href="https://en.wikipedia.org/wiki/Vernal_hanging_parrot">2. Vernal Hanging Parrot (Loriculus Vernalis)</a>
 <a href="https://en.wikipedia.org/wiki/Rose-ringed_parakeet">3. Rose Ringed Parakeet (Pscittacula Krameri)</a>
@@ -51,7 +70,12 @@
 <a href="https://en.wikipedia.org/wiki/Bronzed_drongo">8. Bronzed Drongo (Dicrurus aeneus)</a>
 <a href="https://en.wikipedia.org/wiki/Hair-crested_drongo">9. Hair Crested Drongo (Dicrurus hottentottus)</a>
 <a href="https://en.wikipedia.org/wiki/Ashy_drongo">10. Ashy Drongo (Dicrurus leucophaeus)</a>
-</i></pre></h3><hr>
+</i></pre></h3></th>
+<th>
+<video controls width="640" height="400" align="right">
+    <source src="video2.mp4" type="video/mp4">
+    <source src="video2.ogg" type="video/ogg">
+  </video></th></tr></thead></table>
 <h5>FOR MORE REFERENCES:</h5>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xVEJ3tfBpGw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/U9uxHz6MWCs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -60,6 +84,5 @@
    <h4>Contact us:9999988888</h4>
    <h4>EMAIL:</h4><a href="mailto:kayalvizhin.18it@kongu.edu.com"><b>happypaws@gmail.com</b></a></p>
   </footer>
- 
 </body>
 </html>
