--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <title>HAPPY PAWS</title>
 <style>
 	body{
-		background-image: url("bg1.jpg");
+		background-image: url("bg10.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
@@ -17,7 +17,14 @@
 	<hr>
 	<h2 style="font-family:cursive; color: red" align="center"><p><i>For buying beautiful Fishes and Birds visit happy paws</i></p></h2>
 	<br>
-	<hr><h2>Fishes</h2>
+	<h3 style=color:red >MENU</h3>
+  <ul style=color:red>
+   <li><p style=color:while> <a href="#fish"><h3>Fishes</h3> </a> </p> </li>
+   <li><p style=color:while> <a href="#bird"><h3>Birds<h3></a> </p></li>
+   <li><p style=color:while> <a href="#video"><h3>Youtube Refdrences<h3></a> </p></li>
+  </ul>  
+ 
+	<hr><h2 id="fish" style='color:black'>Fishes</h2>
 	<br>
 	<a href="https://en.wikipedia.org/wiki/Goldfish"><img src="22519-3-real-fish-transparent-image.png" width="300"></a>
 	<img src="logo3.png" width="300">
@@ -49,7 +56,7 @@
     <source src="video1.mp4" type="video/mp4">
     <source src="video1.ogg" type="video/ogg">
   </video></th></tr></thead></table>
-<hr><h2>Birds</h2>
+<hr><h2 id="bird" style='color:black'>Birds</h2>
 	<br>
 	<a href="https://en.wikipedia.org/wiki/Bird"><img src="PicsArt_07-15-09.50.30.png" width="300"></a>
 	<img src="logo5.png" width="300">
@@ -76,13 +83,13 @@
     <source src="video2.mp4" type="video/mp4">
     <source src="video2.ogg" type="video/ogg">
   </video></th></tr></thead></table>
-<h5>FOR MORE REFERENCES:</h5>
+<h5 id="video" style='color:black'>FOR MORE REFERENCES:</h5>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xVEJ3tfBpGw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/U9uxHz6MWCs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<footer style="background-color:lightblue">
+<footer style="background-color:pink">
    <p><h3><b><i>HOME DELIVERY AVAILABLE</i></b>   </h3>
    <h4>Contact us:9999988888</h4>
-   <h4>EMAIL:</h4><a href="mailto:kayalvizhin.18it@kongu.edu.com"><b>happypaws@gmail.com</b></a></p>
+   <h4>EMAIL:</h4><a href="mailto:kayalvizhin.18it@kongu.edu.com" style='color:red'><b>happypaws@gmail.com</b></a></p>
   </footer>
 </body>
 </html>
