--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<center><image src="logo.png" width="600"></center>
 	<hr>
-	<h2 style="font-family:cursive; color: red" align="center"><p><i>For buying beautiful Fishes and Birds visit happy paws</i></p></h2>
+	<h2 style="font-family:cursive; color: red" align="center"><p><i>Visit happy paws for making your home beatiful</i></p></h2>
 	<br>
 	<h3 style=color:red >MENU</h3>
   <ul style=color:red>
