--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <ul style=color:red>
    <li><p style=color:while> <a href="#fish"><h3>Fishes</h3> </a> </p> </li>
    <li><p style=color:while> <a href="#bird"><h3>Birds<h3></a> </p></li>
-   <li><p style=color:while> <a href="#video"><h3>Youtube Refdrences<h3></a> </p></li>
+   <li><p style=color:while> <a href="#video"><h3>Youtube References<h3></a> </p></li>
   </ul>  
  
 	<hr><h2 id="fish" style='color:black'>Fishes</h2>
