--- a/index.html
+++ b/index.html
@@ -26,71 +26,60 @@
  
 	<hr><h2 id="fish" style='color:black'>Fishes</h2>
 	<br>
-	<br>
-	<a href="https://en.wikipedia.org/wiki/Goldfish"><img src="22519-3-real-fish-transparent-image.png" width="300"></a>
-	<img src="logo3.png" width="300">
-	<img src="logo2.png" width="300">
-	<img src="logo10.png" width="300">
-<table border="7" cellpadding ="25" cellspacing="10" style="width:100%;">
-    <thead><tr>
-    <th>
-	<h3><pre style="color:blue" align="justify"><i><h2>FRESHWATER FISHES AVAILABLE:</h2>
-<a href="https://www.liveaquaria.com/product/2741/?pcatid=2741">1. Longfin Zebra Danio (Danio rerio)</a>
-<a href="https://en.wikipedia.org/wiki/Jack_Dempsey_(fish)">2. Jack Dempsey (Rocio octofasciata)</a>
-<a href="https://en.wikipedia.org/wiki/Neon_tetra">3. Neon Tetra (Paracheirodon innesi)</a>
-<a href="https://en.wikipedia.org/wiki/Siamese_fighting_fish">4. Bettas (Bettasplendens)</a>
-<a href="https://en.wikipedia.org/wiki/Symphysodon_aequifasciatus#:~:text=Symphysodon%20aequifasciatus%2C%20the%20blue%20discus,downriver%20from%20the%20Purus%20arch.">5. Discus fish (Symphysodon aequifasciatus)</a>
-<a href="https://en.wikipedia.org/wiki/Corydoras">6. Corydoras Catfish (Corydoras)</a>         
-<a href="https://en.wikipedia.org/wiki/Oscar_(fish)">7. Oscar Fish (Astronotus ocellatus)</a>
-<a href="https://en.wikipedia.org/wiki/Guppy">8. Guppi (Poecilia reticulata)</a>
-<a href="https://en.wikipedia.org/wiki/Poecilia_sphenops">9. Platy (Poecilia)</a>
-<a href="https://en.wikipedia.org/wiki/Green_swordtail">10. Swordtails (Xiphophorous hellerii)</a>
-<a href="https://en.wikipedia.org/wiki/Harlequin_rasbora">11. Harlequin rasbora (Trigonostigma heteromorpha)</a>
-<a href="https://en.wikipedia.org/wiki/Mikrogeophagus_altispinosus">12. Bolivian ram (Mikrogeophagus altispinosus)</a>
-<a href="https://en.wikipedia.org/wiki/White_Cloud_Mountain_minnow">13. White Cloud Mountain Minnow (Tanichthys albonubes)</a>
-<a href="https://en.wikipedia.org/wiki/Sailfin_molly">14. Sailfin Molly (Poecilia latipinna)</a>
-<a href="https://en.wikipedia.org/wiki/Hypostomus_plecostomus">15. Plecostomus (Hypostomus plecostomus)</a></i>
+	<h2 style='color:blue' align="center">CLICK IMAGE FOR MORE VARIETIES</h2>
+	<a href="fish.html" target="blank"><img src="22519-3-real-fish-transparent-image.png" width="300"></a>
+	<a href="fish.html" target="blank"><img src="logo3.png" width="300"></a>
+	<a href="fish.html" target="blank"><img src="logo2.png" width="300"></a>
+	<a href="fish.html" target="blank"><img src="logo10.png" width="300"></a>
+	<h3 align="center"><pre>
+Big fish and small fish
+Swimming here in this pond
+Fast fish and slow fish
+And now one is gone
+
+
+Poor, foolish fishes
+Just make a few stronger
+And watch how these fishes
+Devour each other
+
+
+To be the small fish
+I'm sure none would bother
+But oh, don't you wish
+You could make the pond smaller?
+
+
+I've found my own niche
+To live my life fuller
+For I am a fish
+Of a different color
 </pre></h3>
-</th>
-<th>
-<video controls width="640" height="400" align="right">
-    <source src="video1.mp4" type="video/mp4">
-    <source src="video1.ogg" type="video/ogg">
-  </video></th></tr></thead></table>
 <hr><h2 id="bird" style='color:black'>Birds</h2>
 	<br>
-	<a href="https://en.wikipedia.org/wiki/Bird"><img src="PicsArt_07-15-09.50.30.png" width="300"></a>
-	<img src="logo5.png" width="300">
-	<img src="logo12.png" width="300">
-	<img src="logo7.png" width="300">
-	<table border="7" cellpadding ="25" cellspacing="10" style="width:100%;">
-    <thead><tr>
-    <th>
-    <h3><pre style="color:blue" align="justify"><i><h2>LIST OF PET BIRDS AVAILABLE:</h2>
-  
-<a href="https://en.wikipedia.org/wiki/Sri_Lanka_frogmouth">1. Ceylon Frogmouth (Batrachostomus moniliger)</a>
-<a href="https://en.wikipedia.org/wiki/Vernal_hanging_parrot">2. Vernal Hanging Parrot (Loriculus Vernalis)</a>
-<a href="https://en.wikipedia.org/wiki/Rose-ringed_parakeet">3. Rose Ringed Parakeet (Pscittacula Krameri)</a>
-<a href="https://en.wikipedia.org/wiki/Plum-headed_parakeet">4. Plum Headed Parakeet (Pscittacula Cyanocephala)</a>
-<a href="https://en.wikipedia.org/wiki/Black_drongo">5. Black Drongo (Dicrurus Macrocercus)</a>
-<a href="https://en.wikipedia.org/wiki/Greater_racket-tailed_drongo">6. Racket Tailed Drongo (Dicrurus paradiseus)</a>
-<a href="https://en.wikipedia.org/wiki/White-bellied_drongo">7. White Bellied Drongo (Dicrurus Caerulescens)</a>
-<a href="https://en.wikipedia.org/wiki/Bronzed_drongo">8. Bronzed Drongo (Dicrurus aeneus)</a>
-<a href="https://en.wikipedia.org/wiki/Hair-crested_drongo">9. Hair Crested Drongo (Dicrurus hottentottus)</a>
-<a href="https://en.wikipedia.org/wiki/Ashy_drongo">10. Ashy Drongo (Dicrurus leucophaeus)</a>
-</i></pre></h3></th>
-<th>
-<video controls width="640" height="400" align="right">
-    <source src="video2.mp4" type="video/mp4">
-    <source src="video2.ogg" type="video/ogg">
-  </video></th></tr></thead></table>
-<h5 id="video" style='color:black'>FOR MORE REFERENCES:</h5>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/xVEJ3tfBpGw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/U9uxHz6MWCs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<footer style="background-color:pink">
-   <p><h3><b><i>HOME DELIVERY AVAILABLE</i></b>   </h3>
-   <h4>Contact us:9999988888</h4>
-   <h4>EMAIL:</h4><a href="mailto:kayalvizhin.18it@kongu.edu.com" style='color:red'><b>happypaws@gmail.com</b></a></p>
+	<h2 style='color:blue' align="center">CLICK IMAGE FOR MORE VARIETIES</h2>
+	<a href="birds.html" target="blank"><img src="PicsArt_07-15-09.50.30.png" width="300"></a>
+	<a href="birds.html" target="blank"><img src="logo5.png" width="300"></a>
+	<a href="birds.html" target="blank"><img src="logo12.png" width="300"></a>
+	<a href="birds.html" target="blank"><img src="logo7.png" width="300"></a>
+	<h3 align="center"><pre>
+Let the bird of loudest lay
+On the sole Arabian tree
+Herald sad and trumpet be,
+To whose sound chaste wings obey.
+
+But thou shrieking harbinger,
+Foul precurrer of the fiend,
+Augur of the fever’s end,
+To this troop come thou not near.
+
+From this session interdict
+Every fowl of tyrant wing,
+Save the eagle, feather’d king;
+Keep the obsequy so strict …
+</pre></h3>
+
+<a href="videos.html" target="blank"><h1 style='color:black'>CLICK HERE FOR MORE REFERENCES</h1>
   </footer>
 </body>
 </html>
