--- a/index.html
+++ b/index.html
@@ -1,19 +1,198 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
- <title>HAPPY PAWS</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Happy Paws</title>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <style>
-	body{
+	body {
+		font-family: 'Open Sans', sans-serif;
 		background-image: url("bg10.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100% 100%;
+    }
+	.form-control {
+		box-shadow: none;
+		border-radius: 4px;        
+        border-color: #dfe3e8;
+	}
+	.form-control:focus {
+		border-color: lightblue;
+		box-shadow: 0 0 8px rgba(0,0,0,0.1);
+	}
 
-        }
+	.navbar {
+		background: #fff;
+		padding-left: 16px;
+		padding-right: 16px;
+		border-bottom: 1px solid #dfe3e8;
+		border-radius: 0;
+	}
+	.navbar .navbar-brand {
+		font-size: 20px;
+		padding-left: 0;
+		padding-right: 50px;
+	}
+	.navbar .navbar-brand b {
+		font-weight: bold;
+		color: deepskyblue;		
+	}
+	.navbar ul.nav li a {
+		color: #999;
+	}
+	.navbar ul.nav li a:hover, .navbar ul.nav li a:focus {
+		color: lightskyblue !important;
+	}
+	.navbar ul.nav li.active > a, .navbar ul.nav li.open > a {
+		color: skyblue!important;
+		background: transparent !important;
+	}
+    .navbar .form-inline .input-group-addon {
+		box-shadow: none;
+        border-radius: 2px 0 0 2px;
+		background: #f5f5f5;
+        border-color: #dfe3e8;
+        font-size: 16px;
+    }
+	.navbar .form-inline i {
+		font-size: 16px;
+	}
+	.navbar .form-inline .btn {
+		border-radius: 2px;
+		color: #fff;
+        border-color: skyblue;
+		background: skyblue;
+		outline: none;
+	}
+	.navbar .form-inline .btn:hover, .navbar .form-inline .btn:focus {
+        border-color: lightblue;
+		background: deepskyblue;
+    }
+	.navbar .search-form {
+		display: inline-block;
+	}
+	.navbar .search-form .btn {
+		margin-left: 4px;
+	}
+	.navbar .search-form .form-control {
+		border-radius: 2px;
+	}
+	.navbar .login-form .input-group {
+		margin-right: 4px;
+		float: left;
+	}
+	.navbar .login-form .form-control {
+		max-width: 158px;
+		border-radius: 0 2px 2px 0;
+	}    	
+	.navbar .navbar-right .dropdown-toggle::after {
+		display: none;
+	}
+	.navbar .dropdown-menu {
+		border-radius: 1px;
+		border-color: #e5e5e5;
+		box-shadow: 0 2px 8px rgba(0,0,0,.05);
+	}
+	.navbar .dropdown-menu li a {
+		padding: 6px 20px;
+	}
+	.navbar .navbar-right .dropdown-menu {
+		width: 505px;
+		padding: 20px;
+		left: auto;
+		right: 0;
+        font-size: 14px;
+	}
+	@media (min-width: 1200px){
+		.search-form .input-group {
+			width: 300px;
+			margin-left: 30px;
+		}
+	}
+	@media (max-width: 768px){
+		.navbar .navbar-right .dropdown-menu {
+			width: 100%;
+			background: transparent;
+			padding: 10px 20px;
+		}
+		.navbar .input-group {
+			width: 100%;
+			margin-bottom: 15px;
+		}
+		.navbar .input-group .form-control {
+			max-width: none;			
+		}
+		.navbar .login-form .btn {
+			width: 100%;
+		}
+	}
 </style>
-</head>
+</head> 
 <body>
-	<center><image src="logo.png" width="600"></center>
+<nav class="navbar navbar-default navbar-expand-lg navbar-light">
+	<div class="navbar-header">
+		<a class="navbar-brand" href="#">Happy<b>Paws</b></a>  		
+		<button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+			<span class="navbar-toggler-icon"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+	</div>
+	<!-- Collection of nav links, forms, and other content for toggling -->
+	<div id="navbarCollapse" class="collapse navbar-collapse">
+		<ul class="nav navbar-nav">
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>			
+			<li class="dropdown">
+				<a data-toggle="dropdown" class="dropdown-toggle" href="#">Services <b class="caret"></b></a>
+				<ul class="dropdown-menu">					
+					<li><a href="#">Birds</a></li>
+					<li><a href="#">Fishes</a></li>
+				</ul>
+			</li>
+			<li class="active"><a href="#">Pricing</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+		<form class="navbar-form form-inline search-form">
+			<div class="input-group">
+				<input type="text" class="form-control" placeholder="Search...">
+				<span class="input-group-btn">
+					<button type="button" class="btn btn-default"><i class="fa fa-search"></i></button>
+				</span>
+			</div>
+		</form>
+		<ul class="nav navbar-nav navbar-right">
+			<li class="dropdown">
+				<a data-toggle="dropdown" class="dropdown-toggle" href="#"><i class="fa fa-user-o"></i> Login</a>
+				<ul class="dropdown-menu">
+					<li>
+                        <form class="form-inline login-form" action="/examples/actions/confirmation.php" method="post">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-user"></i></span>
+                                <input type="text" class="form-control" placeholder="Username" required>
+                            </div>
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+                                <input type="text" class="form-control" placeholder="Password" required>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Login</button>
+                        </form>                        
+					</li>
+				</ul>
+			</li>
+		</ul>
+	</div>
+</nav>
+<center><image src="logo.png" width="600"></center>
 	<hr>
 	<h2 style="font-family:cursive; color: red" align="center"><p><i>Visit happy paws for making your home beatiful</i></p></h2>
 	<br>
@@ -82,4 +261,4 @@ Keep the obsequy so strict …
 <a href="videos.html" target="blank"><h1 style='color:black'>CLICK HERE FOR MORE REFERENCES</h1>
   </footer>
 </body>
-</html>
+</html>                                                                                    
